fixed some alignments

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,32 +1,34 @@
-.header{
+.header {
     margin-top: 60px;
 }
-.headerTitles{
-
- display: flex;
- flex-direction: column;
- align-items: center;
- font-family: 'Lora',serif;
- color: #444
-
+  
+.headerTitles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: "Lora", serif;
 }
-.headerTitlesm{
-
+  
+.headerTitleSm {
     position: absolute;
-    top: 19%;
-    font-size: 23px;
+    top: 18%;
+    font-size: 20px;
+    
 }
-.headerTitleLg{
+  
+.headerTitleLg {
     position: absolute;
-    top: 21%;
-    font-size: 100px;
-    color: rgba(255, 255, 255);
-}
+    top: 20%;
+    font-size: 85px;
+    background: -webkit-linear-gradient(229deg, rgb(255, 255, 255) 0%, rgb(244, 112, 68) 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color:transparent;
+}  
 .headerImg{
-    width: 100%;
-    height: 480px;
-    margin-top: 68px;
-    object-fit: cover;
+      width: 100%;
+      height: 640px;
+      margin-top: 20px;
+      object-fit: cover;
 }
 .big{
 
