--- a/src/pages/settings/Settings.css
+++ b/src/pages/settings/Settings.css
@@ -78,3 +78,9 @@
     margin-top: 20px;
     cursor: pointer;
 }
+.sp{
+    color: rgb(14, 201, 14);
+    text-align: center;
+    margin-top: 26px;
+    font-size:20px;
+}
